--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,35 @@
 <html>
 <body>
+  <div id="game"></div>
+
+  <div class="players">
+    <div class="player">
+      <h1> Player One </h1>
+      <select id="player-one-select">
+        <option value="">--Please choose an option--</option>
+        <option value="rock">Rock</option>
+        <option value="paper">Paper</option>
+        <option value="scissors">Scissors</option>
+      </select>
+      <div class="button" id="player-one-send">
+        Send Move
+      </div>
+    </div>
+
+    <div class="player">
+      <h1> Player Two </h1>
+      <select id="player-two-select">
+        <option value="">--Please choose an option--</option>
+        <option value="rock">Rock</option>
+        <option value="paper">Paper</option>
+        <option value="scissors">Scissors</option>
+      </select>
+      <div class="button" id="player-two-send">
+        Send Move
+      </div>
+    </div>
+  </div>
+
   <script src="./index.js"></script>
 </body>
 </html>
